<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_device"
            android:textColor="@color/text666"
            android:textSize="18dp" />


        <TextView
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_button"
            android:gravity="center"
            android:text="@string/history"
            android:textColor="@color/text666"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/normal" />
    </RelativeLayout>


    <LinearLayout
        android:layout_marginTop="@dimen/top_bar_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/label_ip"
                android:textColor="@color/press"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#eeeeee"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/ip_input"
                android:lines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/label_port"
                android:textColor="@color/press"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/port"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#eeeeee"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/port_input"
                android:inputType="number"
                android:lines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/label_model"
                android:textColor="@color/press"
                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#eeeeee"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/model"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:entries="@array/channel" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/label_protocol"
                android:textColor="@color/press"
                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#eeeeee"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/protocol"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:entries="@array/protocol" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDeviceId"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:visibility="gone">

            <TextView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/label_device_id"
                android:textColor="@color/press"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/deviceId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#eeeeee"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/device_id_input"
                android:lines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14dp" />

            <ImageView
                android:id="@+id/scan"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:src="@android:drawable/ic_menu_camera" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llUserName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:visibility="gone">

            <TextView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/label_user_name"
                android:textColor="@color/press"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#eeeeee"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/user_name_input"
                android:lines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPassword"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:visibility="gone">

            <TextView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/label_password"
                android:textColor="@color/press"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#eeeeee"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/password_input"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="40dp"
        android:background="#eeeeee"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/confirm" />
</FrameLayout>