<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/scene"
            android:textColor="@color/text666"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/complete"
            android:textColor="@color/text666"
            android:textStyle="bold" />

    </RelativeLayout>

    <include layout="@layout/item_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eeeef4"
        android:orientation="vertical">

        <TextView
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/Name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/scene_name_input"
            android:lines="1"
            android:paddingLeft="20dp"
            android:paddingRight="25dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/Icon" />

        <RelativeLayout
            android:id="@+id/iconLay"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/icon6" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:src="@drawable/ic_arrow" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/ctl_mode"
            android:textSize="16dp" />

        <RelativeLayout
            android:id="@+id/ctlLay"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/mode"
                android:paddingLeft="10dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/device"
                android:textColor="@color/text666"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/add"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|right"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:src="@drawable/ic_add" />
        </LinearLayout>

        <include layout="@layout/item_line" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>